Refactors configs, news api client