@@ -1,138 +1,201 @@
 package io.github.lefpap.news_summarizer.news_api;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import jakarta.validation.constraints.*;
+
+import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
+import java.util.*;
+import java.util.stream.Collectors;
+
+import static java.util.function.Predicate.not;
 
 public record NewsApiQueryParams(
+
+    @NotBlank(message = "`q` (the search query) is mandatory")
+    @Size(max = 500)
     String q,
-    SearchIn searchIn,
-    List<String> sources,
-    List<String> domains,
-    List<String> excludeDomains,
-    LocalDateTime from,
-    LocalDateTime to,
+
+    @Size(max = 3)
+    List<SearchIn> searchIn,
+
+    @Size(max = 20)
+    List<@NotBlank String> sources,
+
+    List<@NotBlank String> domains,
+    List<@NotBlank String> excludeDomains,
+
+    @PastOrPresent LocalDate from,
+    @PastOrPresent LocalDate to,
+
+    @Pattern(regexp = "^[a-z]{2}(,[a-z]{2})*$",
+        message = "Language must be 2-letter ISO codes separated by commas")
     String language,
+
     SortBy sortBy,
-    Integer pageSize,
-    Integer page
+
+    @Min(1) @Max(100) Integer pageSize,
+    @Min(1) Integer page
 ) {
 
-    public static final String Q = "q";
-    public static final String SEARCH_IN = "searchIn";
-    public static final String SOURCES = "sources";
-    public static final String DOMAINS = "domains";
-    public static final String EXCLUDE_DOMAINS = "excludeDomains";
-    public static final String FROM = "from";
-    public static final String TO = "to";
-    public static final String LANGUAGE = "language";
-    public static final String SORT_BY = "sortBy";
-    public static final String PAGE_SIZE = "pageSize";
-    public static final String PAGE = "page";
+    private static final String Q = "q";
+    private static final String SEARCH_IN = "searchIn";
+    private static final String SOURCES = "sources";
+    private static final String DOMAINS = "domains";
+    private static final String EXCLUDE_DOMAINS = "excludeDomains";
+    private static final String FROM = "from";
+    private static final String TO = "to";
+    private static final String LANGUAGE = "language";
+    private static final String SORT_BY = "sortBy";
+    private static final String PAGE_SIZE = "pageSize";
+    private static final String PAGE = "page";
 
-    public NewsApiQueryParams {
-        if (q == null || q.isBlank()) {
-            throw new IllegalArgumentException("Query parameter 'q' cannot be null or empty");
-        }
+    public static Builder builder() {   /* mandatory arg */
+        return new Builder();
+    }
 
-        if (pageSize != null && pageSize < 1) {
-            throw new IllegalArgumentException("Page size must be greater than 0");
-        }
-
-        if (page != null && page < 1) {
-            throw new IllegalArgumentException("Page must be greater than 0");
-        }
+    public Builder toBuilder() {
+        Builder builder = new Builder();
+        builder.q(q);
+        builder.searchIn(searchIn);
+        builder.sources(sources);
+        builder.domains(domains);
+        builder.excludeDomains(excludeDomains);
+        builder.from(from);
+        builder.to(to);
+        builder.language(language);
+        builder.sortBy(sortBy);
+        builder.pageSize(pageSize);
+        builder.page(page);
+        return builder;
     }
 
     public Map<String, String> toMap() {
-        Map<String, String> params = new HashMap<>();
-        params.put(Q, q);
+        var map = new HashMap<String, String>();
 
-        if (searchIn != null) {
-            params.put(SEARCH_IN, searchIn.value());
-        }
+        map.put(Q, q);
 
-        if (sources != null && !sources.isEmpty()) {
-            params.put(SOURCES, String.join(",", sources));
-        }
+        Optional.ofNullable(this.searchIn)
+            .filter(not(List::isEmpty))
+            .map(list -> list.stream()
+                .map(SearchIn::value)
+                .collect(Collectors.joining(",")))
+            .ifPresent(csv -> map.put(SEARCH_IN, csv));
 
-        if (domains != null && !domains.isEmpty()) {
-            params.put(DOMAINS, String.join(",", domains));
-        }
+        Optional.ofNullable(this.sources)
+            .filter(not(List::isEmpty))
+            .map(list -> String.join(",", list))
+            .ifPresent(csv -> map.put(SOURCES, csv));
 
-        if (excludeDomains != null && !excludeDomains.isEmpty()) {
-            params.put(EXCLUDE_DOMAINS, String.join(",", excludeDomains));
-        }
+        Optional.ofNullable(this.domains)
+            .filter(not(List::isEmpty))
+            .map(list -> String.join(",", list))
+            .ifPresent(csv -> map.put(DOMAINS, csv));
 
-        if (from != null) {
-            params.put(FROM, from.toString());
-        }
+        Optional.ofNullable(this.excludeDomains)
+            .filter(not(List::isEmpty))
+            .map(list -> String.join(",", list))
+            .ifPresent(csv -> map.put(EXCLUDE_DOMAINS, csv));
 
-        if (to != null) {
-            params.put(TO, to.toString());
-        }
+        Optional.ofNullable(from)
+            .map(d -> d.format(DateTimeFormatter.ISO_DATE))
+            .ifPresent(fmtd -> map.put(FROM, fmtd));
 
-        if (language != null) {
-            params.put(LANGUAGE, language);
-        }
+        Optional.ofNullable(to)
+            .map(t -> t.format(DateTimeFormatter.ISO_DATE))
+            .ifPresent(s -> map.put(TO, s));
 
-        if (sortBy != null) {
-            params.put(SORT_BY, sortBy.value());
-        }
+        Optional.ofNullable(language)
+            .map(String::trim)
+            .ifPresent(s -> map.put(LANGUAGE, s));
 
-        if (pageSize != null) {
-            params.put(PAGE_SIZE, String.valueOf(pageSize));
-        }
+        Optional.ofNullable(sortBy)
+            .map(SortBy::value)
+            .ifPresent(s -> map.put(SORT_BY, s));
 
-        if (page != null) {
-            params.put(PAGE, String.valueOf(page));
-        }
+        Optional.ofNullable(pageSize)
+            .map(String::valueOf)
+            .ifPresent(s -> map.put(PAGE_SIZE, s));
 
-        return params;
+        Optional.ofNullable(page)
+            .map(String::valueOf)
+            .ifPresent(s -> map.put(PAGE, s));
+
+        return map;
     }
 
-    public static NewsApiQueryParams fromMap(Map<String, String> map) {
-        String q = map.get(Q);
-        SearchIn searchIn = map.containsKey(SEARCH_IN) ? SearchIn.valueOf(map.get(SEARCH_IN).toUpperCase()) : null;
-        List<String> sources = map.containsKey(SOURCES) ? List.of(map.get(SOURCES).split(",")) : List.of();
-        List<String> domains = map.containsKey(DOMAINS) ? List.of(map.get(DOMAINS).split(",")) : List.of();
-        List<String> excludeDomains = map.containsKey(EXCLUDE_DOMAINS) ? List.of(map.get(EXCLUDE_DOMAINS).split(",")) : List.of();
-        LocalDateTime from = map.containsKey(FROM) ? LocalDateTime.parse(map.get(FROM)) : null;
-        LocalDateTime to = map.containsKey(TO) ? LocalDateTime.parse(map.get(TO)) : null;
-        String language = map.get(LANGUAGE);
-        SortBy sortBy = map.containsKey(SORT_BY) ? SortBy.valueOf(map.get(SORT_BY).toUpperCase()) : null;
-        Integer pageSize = map.containsKey(PAGE_SIZE) ? Integer.valueOf(map.get(PAGE_SIZE)) : null;
-        Integer page = map.containsKey(PAGE) ? Integer.valueOf(map.get(PAGE)) : null;
-        return new NewsApiQueryParams(q, searchIn, sources, domains, excludeDomains, from, to, language, sortBy, pageSize, page);
-    }
+    public static NewsApiQueryParams of(Map<String, String> map) {
+        Builder builder = new Builder();
 
-    public static NewsApiQueryParamsBuilder builder() {
-        return new NewsApiQueryParamsBuilder();
-    }
+        builder.q(map.get(Q));
 
-    public NewsApiQueryParamsBuilder toBuilder() {
-        return new NewsApiQueryParamsBuilder()
-            .q(q)
-            .searchIn(searchIn)
-            .sources(sources)
-            .domains(domains)
-            .excludeDomains(excludeDomains)
-            .from(from)
-            .to(to)
-            .language(language)
-            .sortBy(sortBy)
-            .pageSize(pageSize)
-            .page(page);
+        builder.searchIn(Optional.ofNullable(map.get(SEARCH_IN))
+            .filter(not(String::isBlank))
+            .map(String::trim)
+            .map(s -> s.split(","))
+            .stream()
+            .flatMap(Arrays::stream)
+            .map(SearchIn::of)
+            .toList());
+
+        builder.sources(Optional.ofNullable(map.get(SOURCES))
+            .filter(not(String::isBlank))
+            .map(String::trim)
+            .map(s -> s.split(","))
+            .stream()
+            .flatMap(Arrays::stream)
+            .toList());
+
+        builder.domains(Optional.ofNullable(map.get(DOMAINS))
+            .filter(not(String::isBlank))
+            .map(String::trim)
+            .map(s -> s.split(","))
+            .stream()
+            .flatMap(Arrays::stream)
+            .toList());
+
+        builder.excludeDomains(Optional.ofNullable(map.get(EXCLUDE_DOMAINS))
+            .filter(not(String::isBlank))
+            .map(String::trim)
+            .map(s -> s.split(","))
+            .stream()
+            .flatMap(Arrays::stream)
+            .toList());
+
+        Optional.ofNullable(map.get(FROM))
+            .map(LocalDate::parse)
+            .ifPresent(builder::from);
+
+        Optional.ofNullable(map.get(TO))
+            .map(LocalDate::parse)
+            .ifPresent(builder::to);
+
+        Optional.ofNullable(map.get(LANGUAGE))
+            .map(String::trim)
+            .filter(not(String::isBlank))
+            .ifPresent(builder::language);
+
+        Optional.ofNullable(map.get(SORT_BY))
+            .map(SortBy::of)
+            .ifPresent(builder::sortBy);
+
+        Optional.ofNullable(map.get(PAGE_SIZE))
+            .filter(not(String::isBlank))
+            .map(String::trim)
+            .map(Integer::valueOf)
+            .ifPresent(builder::pageSize);
+
+        Optional.ofNullable(map.get(PAGE))
+            .filter(not(String::isBlank))
+            .map(String::trim)
+            .map(Integer::valueOf)
+            .ifPresent(builder::page);
+
+        return builder.build();
     }
 
     public enum SearchIn {
-        TITLE("title"),
-        DESCRIPTION("description"),
-        CONTENT("content");
-
-        private final String value;
+        TITLE("title"), DESCRIPTION("description"), CONTENT("content");
+        final String value;
 
         SearchIn(String value) {
             this.value = value;
@@ -141,14 +204,24 @@ public record NewsApiQueryParams(
         public String value() {
             return value;
         }
+
+        public static SearchIn of(String value) {
+            if (value == null || value.isBlank()) {
+                throw new IllegalArgumentException("Search in value cannot be null or blank");
+            }
+
+            String trimmedValue = value.trim();
+            return Arrays.stream(SearchIn.values())
+                .filter(s -> s.value.equalsIgnoreCase(trimmedValue))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Invalid search in value: " + trimmedValue));
+        }
+
     }
 
     public enum SortBy {
-        RELEVANCY("relevancy"),
-        POPULARITY("popularity"),
-        PUBLISHED_AT("publishedAt");
-
-        private final String value;
+        RELEVANCY("relevancy"), POPULARITY("popularity"), PUBLISHED_AT("publishedAt");
+        final String value;
 
         SortBy(String value) {
             this.value = value;
@@ -157,108 +230,122 @@ public record NewsApiQueryParams(
         public String value() {
             return value;
         }
+
+        public static SortBy of(String value) {
+            if (value == null || value.isBlank()) {
+                throw new IllegalArgumentException("Sort by value cannot be null or blank");
+            }
+
+            String trimmedValue = value.trim();
+            return Arrays.stream(SortBy.values())
+                .filter(s -> s.value.equalsIgnoreCase(trimmedValue))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Invalid sort by value: " + trimmedValue));
+        }
     }
 
-    public static class NewsApiQueryParamsBuilder {
-        private String q;
-        private SearchIn searchIn;
-        private List<String> sources = new ArrayList<>();
-        private List<String> domains = new ArrayList<>();
-        private List<String> excludeDomains = new ArrayList<>();
-        private LocalDateTime from;
-        private LocalDateTime to;
+    public static final class Builder {
+        private String q;                     // mandatory
+        private List<SearchIn> searchIn = List.of();
+        private List<String> sources = List.of();
+        private List<String> domains = List.of();
+        private List<String> excludeDomains = List.of();
+        private LocalDate from;
+        private LocalDate to;
         private String language;
         private SortBy sortBy;
         private Integer pageSize;
         private Integer page;
 
-        public NewsApiQueryParamsBuilder q(String q) {
+        public Builder q(String q) {
             this.q = q;
             return this;
         }
 
-        public NewsApiQueryParamsBuilder searchIn(SearchIn searchIn) {
-            this.searchIn = searchIn;
+        public Builder searchIn(List<SearchIn> fields) {
+            this.searchIn = List.copyOf(fields);
             return this;
         }
 
-        public NewsApiQueryParamsBuilder sources(List<String> sources) {
-            this.sources = List.copyOf(sources);
+        public Builder searchIn(SearchIn... fields) {
+            this.searchIn = List.copyOf(Arrays.asList(fields));
             return this;
         }
 
-        public NewsApiQueryParamsBuilder sources(String... sources) {
-            this.sources = List.of(sources);
+        public Builder sources(List<String> s) {
+            this.sources = List.copyOf(s);
             return this;
         }
 
-        public NewsApiQueryParamsBuilder addSource(String source) {
-            this.sources.add(source);
+        public Builder sources(String... s) {
+            this.sources = List.copyOf(Arrays.asList(s));
             return this;
         }
 
-        public NewsApiQueryParamsBuilder domains(List<String> domains) {
-            this.domains = List.copyOf(domains);
+        public Builder domains(List<String> d) {
+            this.domains = List.copyOf(d);
             return this;
         }
 
-        public NewsApiQueryParamsBuilder domains(String... domains) {
-            this.domains = List.of(domains);
+        public Builder domains(String... d) {
+            this.domains = List.copyOf(Arrays.asList(d));
             return this;
         }
 
-        public NewsApiQueryParamsBuilder addDomain(String domain) {
-            this.domains.add(domain);
+        public Builder excludeDomains(List<String> d) {
+            this.excludeDomains = List.copyOf(d);
             return this;
         }
 
-        public NewsApiQueryParamsBuilder excludeDomains(List<String> excludeDomains) {
-            this.excludeDomains = List.copyOf(excludeDomains);
+        public Builder excludeDomains(String... d) {
+            this.excludeDomains = List.copyOf(Arrays.asList(d));
             return this;
         }
 
-        public NewsApiQueryParamsBuilder excludeDomains(String... excludeDomains) {
-            this.excludeDomains = List.of(excludeDomains);
+        public Builder from(LocalDate date) {
+            this.from = date;
             return this;
         }
 
-        public NewsApiQueryParamsBuilder addExcludeDomain(String excludeDomain) {
-            this.excludeDomains.add(excludeDomain);
+        public Builder to(LocalDate date) {
+            this.to = date;
             return this;
         }
 
-        public NewsApiQueryParamsBuilder from(LocalDateTime from) {
-            this.from = from;
+        public Builder language(String lang) {
+            this.language = lang;
             return this;
         }
 
-        public NewsApiQueryParamsBuilder to(LocalDateTime to) {
-            this.to = to;
+        public Builder sortBy(SortBy s) {
+            this.sortBy = s;
             return this;
         }
 
-        public NewsApiQueryParamsBuilder language(String language) {
-            this.language = language;
+        public Builder pageSize(int ps) {
+            this.pageSize = ps;
             return this;
         }
 
-        public NewsApiQueryParamsBuilder sortBy(SortBy sortBy) {
-            this.sortBy = sortBy;
-            return this;
-        }
-
-        public NewsApiQueryParamsBuilder pageSize(Integer pageSize) {
-            this.pageSize = pageSize;
-            return this;
-        }
-
-        public NewsApiQueryParamsBuilder page(Integer page) {
-            this.page = page;
+        public Builder page(int p) {
+            this.page = p;
             return this;
         }
 
         public NewsApiQueryParams build() {
-            return new NewsApiQueryParams(q, searchIn, sources, domains, excludeDomains, from, to, language, sortBy, pageSize, page);
+            return new NewsApiQueryParams(
+                q,
+                searchIn,
+                sources,
+                domains,
+                excludeDomains,
+                from,
+                to,
+                language,
+                sortBy,
+                pageSize,
+                page
+            );
         }
     }
 }
